# fc_bussim_tuna

./: LICENSE.en.txt  LICENSE.ja.txt  README.md
firmware/: CMakeLists.txt  _build_note.en.txt  _build_note.ja.txt  _note.txt  bus_sim.c  bus_sim.h  bus_sim.pio  flash_memory.c  flash_memory.h  kazzo_request.h  main.c  tusb_config.h  usb_drv.c  usb_drv.h
schematic/: BOMLIST.xlsx  FC_RW-cache.lib  FC_RW.kicad_pcb  FC_RW.lib  FC_RW.pro  FC_RW.sch  MCU_RaspberryPi_and_Boards.lib  fp-lib-table  sym-lib-table
schematic/FC_RW.pretty/: Famicom_60pin.kicad_mod  GW-12LCPx.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
tuna_can/: ReadMe.en.txt  ReadMe.ja.txt  tuna_can.sln
tuna_can/tuna_can/: KazzoAccess.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  tuna_can.csproj
tuna_can/tuna_can/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
